--- a/test/shipping/services.html
+++ b/test/shipping/services.html
@@ -100,6 +100,13 @@
             <!-- /.container -->
         </section>
         <!-- /section -->
+
+
+        <!-- /section -->
+
+
+
+        <!-- /section -->
         <section class="wrapper bg-light angled upper-end">
             <div class="container pb-14 pb-md-16">
                 <div class="row mb-8">
@@ -307,6 +314,289 @@
             </div>
             <!-- /.container -->
         </section>
+
+
+        <section class="wrapper bg-light">
+            <div class="container py-14 py-md-16">
+                <h2 class="fs-15 text-uppercase text-muted mb-3">Nuestros clientes</h2>
+                <div class="row gx-lg-8 mb-10 gy-5">
+                    <div class="col-lg-6">
+                        <h3 class="display-5 mb-0">CRUCEROS</h3>
+                    </div>
+                    <!-- /column -->
+
+                    <!-- /column -->
+                </div>
+                <!-- /.row -->
+                <div class="row row-cols-2 row-cols-md-3 row-cols-xl-5 gx-lg-6 gy-6 justify-content-center">
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/logos/royalcaribbean.jpg" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/logos/celebritycruises.jpg" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/logos/oceaniacruises.jpg" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/logos/norweigan.jpg" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/logos/costa.jpg" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/logos/passat.jpg" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/logos/japangrace.jpg" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/logos/azamara.jpg" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/logos/seven.jpg" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/logos/pullmantur.jpg" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+                </div>
+                <!--/.row -->
+                <br><br>
+
+                <div class="row gx-lg-8 mb-10 gy-5">
+                    <div class="col-lg-6">
+                        <h3 class="display-5 mb-0">CONTAINEROS</h3>
+                    </div>
+                    <!-- /column -->
+
+                    <!-- /column -->
+                </div>
+                <!-- /.row -->
+                <div class="row row-cols-2 row-cols-md-3 row-cols-xl-5 gx-lg-6 gy-6 justify-content-center">
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/logos/yangming.jpg" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/logos/hapaglloyd.jpg" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+
+                    <!--/column -->
+                </div>
+                <!--/.row -->
+                <br><br>
+
+                <div class="row gx-lg-8 mb-10 gy-5">
+                    <div class="col-lg-6">
+                        <h3 class="display-5 mb-0">GRANELEROS</h3>
+                    </div>
+                    <!-- /column -->
+
+                    <!-- /column -->
+                </div>
+                <!-- /.row -->
+                <div class="row row-cols-2 row-cols-md-3 row-cols-xl-5 gx-lg-6 gy-6 justify-content-center">
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z1.png" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z2.png" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z3.png" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z4.png" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z5.png" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+                </div>
+                <!--/.row -->
+
+                <br><br>
+
+                <div class="row gx-lg-8 mb-10 gy-5">
+                    <div class="col-lg-6">
+                        <h3 class="display-5 mb-0">TANQUEROS</h3>
+                    </div>
+                    <!-- /column -->
+
+                    <!-- /column -->
+                </div>
+                <!-- /.row -->
+                <div class="row row-cols-2 row-cols-md-3 row-cols-xl-5 gx-lg-6 gy-6 justify-content-center">
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z1.png" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z2.png" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z3.png" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z4.png" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+                    <div class="col">
+                        <div class="card shadow-lg h-100 align-items-center">
+                            <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
+                                <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z5.png" alt="" /></figure>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!--/.card -->
+                    </div>
+                    <!--/column -->
+                </div>
+                <!--/.row -->
+
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /section -->
+
         <!-- /section -->
     </div>
     <!-- /.content-wrapper -->
