--- a/test/swansea/about.html
+++ b/test/swansea/about.html
@@ -103,7 +103,7 @@
             <figure class="position-absoute" style="bottom: 0; left: 0; z-index: 2;"><img src="./assets/img/photos/about4.png" alt="" /></figure>
         </section>
         <!-- /section -->
-        <section class="wrapper bg-light angled upper-end lower-end">
+        <section class="wrapper bg-light angled upper-end upper-end">
             <div class="container py-14 py-md-16">
                 <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-17 align-items-center">
                     <div class="col-lg-6 position-relative order-lg-2">
@@ -119,8 +119,8 @@
                     <div class="col-lg-6">
                         <img src="./assets/img/icons/lineal/megaphone.svg" class="svg-inject icon-svg icon-svg-md mb-4" alt="" />
                         <h2 class="display-4 mb-3">¿QUIÉNES SOMOS?</h2>
-                        <p class="lead fs-lg">SWANSEA es el representante de YANG MING LINE en Paraguay, somos una agencia marítima de de primera línea que ofrece servicios de agenciamiento marítimo y operaciones portuarias . Nuestra empresa madre, REPREMAR Shipping es una
-                            reconocida agencia marítima uruguaya que ofrece servicios de back-office para cruceros, portacontenedores, petroleros, graneleros y buques de enlace que operan en cualquier puerto de la región.</p>
+                        <p class="lead fs-lg">SWANSEA es el representante de YANG MING LINE en Paraguay, somos una agencia marítima de primera línea que ofrece servicios de agenciamiento marítimo y operaciones portuarias . Nuestra empresa madre, REPREMAR Shipping es una reconocida
+                            agencia marítima uruguaya que ofrece servicios de back-office para cruceros, portacontenedores, petroleros, graneleros y buques de enlace que operan en cualquier puerto de la región.</p>
                         <p class="mb-6">Repremar fue fundada en 1946 en Uruguay, pertenecía antiguamente al Vestey Group (Inglaterra). En 1982 fue adquirida por la familia Pena. Con los nuevos propietarios la empresa fue reorganizada logrando una gran expansión en sus
                             actividades y en el alcance de sus servicios. Algunas de las compañías navieras más importantes del mundo, como COSCO, CHINA SHIPPING y CSAV han confiado en REPREMAR Shipping como su socio regional, estableciendo joint-ventures
                             en Uruguay y Argentina, en 1993, 2005 y 2008 respectivamente.</p>
@@ -129,7 +129,8 @@
                     </div>
                     <!--/column -->
                 </div>
-                <!--/.row -->
+
+
                 <div class="row mb-5">
                     <div class="col-md-10 col-xl-8 col-xxl-7 mx-auto text-center">
                         <img src="./assets/img/icons/lineal/list.svg" class="svg-inject icon-svg icon-svg-md mb-4" alt="" />
@@ -137,67 +138,38 @@
                     </div>
                     <!-- /column -->
                 </div>
-                <!-- /.row -->
-                <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
-                    <div class="col-lg-6 order-lg-2">
-                        <div class="card me-lg-6">
-                            <div class="card-body p-6">
-                                <div class="d-flex flex-row">
-                                    <div>
-                                        <span class="icon btn btn-circle btn-lg btn-soft-primary disabled me-4"><span class="number">M</span></span>
-                                    </div>
-                                    <div>
-                                        <h4 class="mb-1">Misión</h4>
-                                        <p class="mb-0">Proporcionar junto nuestros proveedores, un servicio eficiente y comprometido con la excelencia, que permita a nuestros clientes cumplir con sus objetivos comerciales. Brindar a nuestro equipo de colaboradores un
-                                            ambiente laboral estable, con posibilidades de capacitación y desarrollo actuando de manera responsable con la sociedad y el medio ambiente.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--/.card-body -->
+
+                <div class="container py-14 py-md-16">
+
+                    <!-- /.row -->
+                    <div class="row gx-md-8 gy-8">
+                        <div class="col-md-6 col-lg-3">
+                            <div class="icon btn btn-block btn-lg btn-soft-yellow disabled mb-5"> <i class="uil uil-phone-volume"></i> </div>
+                            <h4>Misión</h4>
+                            <p class="mb-3">Proporcionar junto nuestros proveedores, un servicio eficiente y comprometido con la excelencia, que permita a nuestros clientes cumplir con sus objetivos comerciales. Brindar a nuestro equipo de colaboradores un ambiente laboral
+                                estable, con posibilidades de capacitación y desarrollo actuando de manera responsable con la sociedad y el medio ambiente.</p>
                         </div>
-                        <!--/.card -->
-                        <div class="card ms-lg-13 mt-6">
-                            <div class="card-body p-6">
-                                <div class="d-flex flex-row">
-                                    <div>
-                                        <span class="icon btn btn-circle btn-lg btn-soft-primary disabled me-4"><span class="number">V</span></span>
-                                    </div>
-                                    <div>
-                                        <h4 class="mb-1">Visión</h4>
-                                        <p class="mb-0">Ser una organización Líder y mantenernos como referente en el país en la provisión de servicios de agenciamiento marítimo</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--/.card-body -->
+                        <!--/column -->
+                        <div class="col-md-6 col-lg-3">
+                            <div class="icon btn btn-block btn-lg btn-soft-red disabled mb-5"> <i class="uil uil-shield-exclamation"></i> </div>
+                            <h4>Visión</h4>
+                            <p class="mb-3">Ser una organización Líder y mantenernos como referente en el país en la provisión de servicios de agenciamiento marítimo</p>
                         </div>
-                        <!--/.card -->
-                        <div class="card mx-lg-6 mt-6">
-                            <div class="card-body p-6">
-                                <div class="d-flex flex-row">
-                                    <div>
-                                        <span class="icon btn btn-circle btn-lg btn-soft-primary disabled me-4"><span class="number">C</span></span>
-                                    </div>
-                                    <div>
-                                        <h4 class="mb-1">Compromiso</h4>
-                                        <p class="mb-0">Cumplir con los requisitos legales que regulan nuestra actividad así como en los sistemas de calidad de la organización buscando de esta forma mejorar continuamente.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--/.card-body -->
+                        <!--/column -->
+                        <div class="col-md-6 col-lg-3">
+                            <div class="icon btn btn-block btn-lg btn-soft-leaf disabled mb-5"> <i class="uil uil-laptop-cloud"></i> </div>
+                            <h4>Compromiso</h4>
+                            <p class="mb-3">Cumplir con los requisitos legales que regulan nuestra actividad así como en los sistemas de calidad de la organización buscando de esta forma mejorar continuamente.</p>
                         </div>
-                        <!--/.card -->
+                        <!--/column -->
+
+                        <!--/column -->
                     </div>
-                    <!--/column -->
-                    <div class="col-lg-6">
-                        <h2 class="display-6 mb-3">Nuestra política</h2>
-                        <p class="lead fs-lg pe-lg-5">Find out everything you need to know and more about how we create our business process models.</p>
-                        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam quis risus eget urna mollis ornare.</p>
-                        <p class="mb-6">Nullam id dolor id nibh ultricies vehicula ut id elit. Vestibulum id ligula porta felis euismod semper. Aenean lacinia bibendum nulla sed consectetur. Sed posuere consectetur est at lobortis. Vestibulum id ligula porta felis.</p>
-                        <a href="https://www.repremar.com" class="btn btn-primary rounded-pill mb-0">Saber más</a>
-                    </div>
-                    <!--/column -->
+                    <!--/.row -->
                 </div>
-                <!--/.row -->
+                <!-- /.container -->
+                <!-- /section -->
+
             </div>
             <!-- /.container -->
         </section>
