--- a/test/swansea/index.html
+++ b/test/swansea/index.html
@@ -142,17 +142,17 @@
                             <div class="col-md-4">
                                 <div class="icon btn btn-block btn-lg btn-soft-purple disabled mb-5"> <i class="uil uil-chat-bubble-user"></i> </div>
                                 <h4>AGENTE PORTUARIO / HUSBANDING</h4>
-                                <p class="mb-3">En todos los puertos paraguayos proveemos servicios para todo tipo de buques: containeros, graneleros, tanqueros, LNG’s, barcazas. SWANSEA cuenta con un personal operativo altamente capacitado. Nuestros servicios incluyen
-                                    arribo y despacho de buques, solicitud de muelle de atraque, solicitud de prácticos, remolcadores, atención de tripulación, reparaciones y repuestos, provisiones, coordinación de trasbordos, atención médica, combustibles
-                                    y lubricantes.</p>
+                                <p class="mb-3">Yang Ming ofrece un servicio de transporte de contenedores programado de primer nivel entre Paraguay y Asia, conectando vía fluvial con el puerto de Montevideo, Uruguay. Le brindamos a nuestros clientes servicios puntuales,
+                                    rápidos, confiables y económicos de alta calidad. Operamos con las principales terminales ubicadas en regiones clave de Paraguay. Garantizamos el transporte seguro y eficiente de su carga en contenedores. Contamos con
+                                    el equipo y los conocimientos necesarios para transportar de forma segura su mercadería.</p>
                                 <a href="./services.html" class="more hover link-purple">Saber más</a>
                             </div>
                             <!--/column -->
                             <div class="col-md-4">
                                 <div class="icon btn btn-block btn-lg btn-soft-green disabled mb-5"> <i class="uil uil-shield-exclamation"></i> </div>
                                 <h4>BACK-OFFICE</h4>
-                                <p class="mb-3">A las compañías navieras que proveen un servicio regular de línea, le ofrecemos todo el espectro de servicios de back-office, como por ejemplo: manejo y procesamiento de todos los documentos para actividades de importación/exportación,
-                                    control de equipos y logística de contenedores, recolección de pago de fletes, gastos y giros, emisión de facturas pro forma para cada escala, gestión contable, liquidación de pagos, gestión de reclamos y reportes estadísticos.</p>
+                                <p class="mb-3">Ofrecemos todo el espectro de servicios de back-office, como por ejemplo: manejo y procesamiento de todos los documentos para actividades de importación/exportación, control de equipos y logística de contenedores, recolección
+                                    de pago de fletes, gastos y giros, emisión de facturas pro forma para cada escala, gestión contable, liquidación de pagos, gestión de reclamos y reportes estadísticos.</p>
                                 <a href="./services.html" class="more hover link-green">Saber más</a>
                             </div>
                             <!--/column -->
