--- a/test/swansea/index.html
+++ b/test/swansea/index.html
@@ -168,94 +168,9 @@
 
                         <!--/.row -->
 
-                        <div class="row gx-lg-8 gx-xl-12 gy-10 gy-lg-0 mb-11 align-items-end">
-                            <div class="col-lg-4">
-                                <h2 class="fs-15 text-uppercase text-muted mb-3">Algunos datos extra</h2>
-                                <h3 class="display-4 mb-0">Algunos de nuestros datos</h3>
-                            </div>
-                            <!-- /column -->
-                            <div class="col-lg-8 mt-lg-2">
-                                <div class="row align-items-center counter-wrapper gy-6 text-center">
-                                    <div class="col-md-4">
-                                        <h3 class="counter counter-lg">1000+</h3>
-                                        <p>Proyectos Completados</p>
-                                    </div>
-                                    <!--/column -->
-                                    <div class="col-md-4">
-                                        <h3 class="counter counter-lg">500+</h3>
-                                        <p>Clientes felices</p>
-                                    </div>
-                                    <!--/column -->
-                                    <div class="col-md-4">
-                                        <h3 class="counter counter-lg">60+</h3>
-                                        <p>Años de experiencia</p>
-                                    </div>
-                                    <!--/column -->
-                                </div>
-                                <!--/.row -->
-                            </div>
-                            <!-- /column -->
-                        </div>
+
                         <!-- /.row -->
-                        <div class="card bg-gray shadow-lg mb-14 mb-md-17">
-                            <div class="row gx-0">
-                                <div class="col-lg-6 image-wrapper bg-image bg-cover rounded-top rounded-lg-start" data-image-src="./assets/img/photos/ymloffice1.jpeg">
-                                </div>
-                                <!--/column -->
-                                <div class="col-lg-6">
-                                    <div class="p-10 p-xl-13">
-                                        <div class="swiper-container dots-closer mb-6" data-margin="30" data-dots="true">
-                                            <div class="swiper">
-                                                <div class="swiper-wrapper">
-                                                    <div class="swiper-slide">
-                                                        <blockquote class="icon icon-top fs-lg text-center">
-                                                            <p>“Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum ligula porta felis euismod semper.”</p>
-                                                            <div class="blockquote-details justify-content-center text-center">
-                                                                <div class="info ps-0">
-                                                                    <h5 class="mb-1">Coriss Ambady</h5>
-                                                                    <p class="mb-0">Financial Analyst</p>
-                                                                </div>
-                                                            </div>
-                                                        </blockquote>
-                                                    </div>
-                                                    <!--/.swiper-slide -->
-                                                    <div class="swiper-slide">
-                                                        <blockquote class="icon icon-top fs-lg text-center">
-                                                            <p>“Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum ligula porta felis euismod semper.”</p>
-                                                            <div class="blockquote-details justify-content-center text-center">
-                                                                <div class="info ps-0">
-                                                                    <h5 class="mb-1">Cory Zamora</h5>
-                                                                    <p class="mb-0">Marketing Specialist</p>
-                                                                </div>
-                                                            </div>
-                                                        </blockquote>
-                                                    </div>
-                                                    <!--/.swiper-slide -->
-                                                    <div class="swiper-slide">
-                                                        <blockquote class="icon icon-top fs-lg text-center">
-                                                            <p>“Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum ligula porta felis euismod semper.”</p>
-                                                            <div class="blockquote-details justify-content-center text-center">
-                                                                <div class="info ps-0">
-                                                                    <h5 class="mb-1">Nikolas Brooten</h5>
-                                                                    <p class="mb-0">Sales Manager</p>
-                                                                </div>
-                                                            </div>
-                                                        </blockquote>
-                                                    </div>
-                                                    <!--/.swiper-slide -->
-                                                </div>
-                                                <!--/.swiper-wrapper -->
-                                            </div>
-                                            <!-- /.swiper -->
-                                        </div>
-                                        <!-- /.swiper-container -->
-                                    </div>
-                                    <!--/div -->
-                                </div>
-                                <!--/column -->
-                            </div>
-                            <!--/.row -->
-                        </div>
+
                         <!-- /.card -->
                         <div class="row text-center">
                             <div class="col-lg-10 col-xl-10 col-xxl-8 mx-auto">
@@ -382,7 +297,7 @@
                                 <div class="accordion accordion-wrapper" id="accordionExample">
                                     <div class="card plain accordion-item">
                                         <div class="card-header" id="headingOne">
-                                            <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> Profesionalismo  </button>
+                                            <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> COMPROMISO CON EL CLIENTE  </button>
                                         </div>
                                         <!--/.card-header -->
                                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -396,7 +311,7 @@
                                     <!--/.accordion-item -->
                                     <div class="card plain accordion-item">
                                         <div class="card-header" id="headingTwo">
-                                            <button class="collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> Contacto inmediato </button>
+                                            <button class="collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> PROFESIONALISMO </button>
                                         </div>
                                         <!--/.card-header -->
                                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -410,7 +325,7 @@
                                     <!--/.accordion-item -->
                                     <div class="card plain accordion-item">
                                         <div class="card-header" id="headingThree">
-                                            <button class="collapsed" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> Transparencia </button>
+                                            <button class="collapsed" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> PRACTICIDAD Y RAPIDEZ EN LOS SERVICIOS </button>
                                         </div>
                                         <!--/.card-header -->
                                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
